--- a/src/components/TextButton/textButton.css
+++ b/src/components/TextButton/textButton.css
@@ -2,7 +2,6 @@
     width: 100%;
     max-width: inherit;
     text-decoration: none;
-    height: fit-content;
     text-align: center;
     padding: .5rem 1rem;
     background-color: var(--color-black);
@@ -19,7 +18,11 @@
     scale: .95;
 }
 
-.text-button:hover {
-    background-color: #333;
-    transform: translateY(-5px);
+
+
+@media (hover: hover) and (pointer: fine) {
+    .text-button:hover {
+        background-color: #333;
+        transform: translateY(-5px);
+    }
 }
